# agentic-ai

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PRINCIPLES.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: deploy.yml
book/: 02-tools-context-agent-loop.md  03-workflow-first-agent-second.md  04-evaluating-and-hardening.md  05-when-not-to-use-agents.md  index.md
code/ch02/: agent.py  context.py  run.py  tool_registry.py
code/ch02/tools/: chunker.py  document_loader.py  extractor.py  retriever.py
code/ch03/: agent.py  compare.py  state.py  workflow.py
code/ch04/: eval_harness.py  reliability.py  security.py
code/shared/: model_client.py
docs/: index.md  llms.txt  principles.md  roadmap.md  robots.txt
docs/book/: 01-what-agentic-means.md  02-tools-context-agent-loop.md  03-workflow-first-agent-second.md  04-multi-agent-without-theater.md  05-human-in-the-loop.md  06-evaluating-and-hardening.md  07-when-not-to-use-agents.md  index.md
docs/code/: reference.md
docs/css/: custom.css
docs/projects/: doc-intelligence-agent.md  incident-runbook-agent.md
docs/proof/: baseline-eval-report.md  failure-cases.md  trace-example.md  workflow-vs-agent-comparison.md
project/doc-intelligence-agent/: README.md
project/doc-intelligence-agent/docs/: architecture.md  failure-analysis.md
project/doc-intelligence-agent/evals/: dataset.jsonl  rubric.yaml  run_eval.py
project/incident-runbook-agent/: README.md
project/incident-runbook-agent/docs/: architecture.md  failure-analysis.md
project/incident-runbook-agent/evals/: dataset.jsonl  rubric.yaml  run_eval.py
src/ch02/: agent.py  context.py  run.py  tool_registry.py
src/ch02/tools/: chunker.py  (+3 more)
src/ch03/: agent.py  compare.py  state.py  workflow.py
src/ch04/: tracer.py
src/ch04_multiagent/: agents.py  compare.py  contracts.py  orchestrator.py  run.py
src/ch05_hitl/: approval.py  audit.py  escalation.py
src/ch06/: cost_profiler.py  eval_harness.py  reliability.py  security.py  tracer.py
src/shared/: config.py  model_client.py  types.py
tests/integration/: test_agent_pipeline.py  test_hitl_pipeline.py  test_multiagent_pipeline.py  test_workflow_pipeline.py
tests/unit/: test_approval.py  test_audit.py  test_context.py  test_contracts.py  test_escalation.py  test_eval_harness.py  test_model_client.py  test_orchestrator.py  test_state.py  test_tool_registry.py
(+5 files in other folders)
