[project]
name = "agentic-ai-for-serious-engineers"
version = "0.1.0"
description = "A practical field guide to building reliable, evaluable, and production-grade agent systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Sunil Prakash"}]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "structlog>=24.1",
    "chromadb>=0.5",
    "pypdf>=4.0",
    "tiktoken>=0.7",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
